fully functional start
