# express-routes/index.js
@@ -1,6 +1,11 @@
 import express from "express";
+import { GeoBroker } from "../classes/geobroker.js";
+import { WeatherBroker } from "../classes/weatherbroker.js";
 
 const router = express.Router();
+
+const geoBroker = new GeoBroker();
+const weatherBroker = new WeatherBroker();
 
 router.get("/status", function (req, res) {
   let responseObject = {};
@@ -8,13 +13,11 @@ router.get("/status", function (req, res) {
   res.json(responseObject);
 });
 
-router.post("/weather", function (req, res) {
-  console.log("Got WEATHER body:", req.body);
+router.post("/weather", async (req, res) => {
   if (req.body.location !== undefined) {
-    let responseObject = {};
-    responseObject.weather = [];
-    responseObject.weather.push(`Finna be hot AF in ${req.body.location}`);
-    res.json(responseObject);
+    const locationResults = await geoBroker.getLatLong(req.body.location);
+    const weatherResults = await weatherBroker.getWeather(locationResults);
+    res.json(weatherResults);
   } else {
     let responseObject = {};
     responseObject.statusCode = 200;
@@ -23,11 +26,9 @@ router.post("/weather", function (req, res) {
 });
 
 router.post("/forecast", function (req, res) {
-  console.log("Got FORECAST body:", req.body);
   if (req.body.location !== undefined) {
     let responseObject = {};
-    responseObject.weather = [];
-    responseObject.weather.push(`Finna be hot AF in ${req.body.location}`);
+    responseObject.weather = ["No results could be found."];
     res.json(responseObject);
   } else {
     let responseObject = {};
